Implement DockyardUpgrade with unlimited upgrade limits
Refactored DockyardUpgradeItem to use an internal IUpgradeCountLimitConfig with unlimited upgrade limits. DockyardUpgradeWrapper now implements ITickableUpgrade and provides stubs for tick and canBeDisabled methods, preparing for future tick-based mechanics.